# rari

./: .gitignore  .lefthook.yml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.BSD-2-Clause  README.md  SECURITY.md  TODO.md  package.json  release-notes.md  release-please-config.json  release-plz.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: _build.yml  _deploy.yml  _run.yml  _test-content-run.yml  _test-content.yml  build-and-upload-binaries.yml  build-content-and-diff.yml  build_and_upload.yml  codeql.yml  lint-test-clippy.yaml  main-review-companion.yml  pr-review-companion.yml  publish-npm-manual.yml  publish-npm-test-run.yml  publish-npm.yml  release-please-pr.yml  release-please-release.yml  (+7 more)
crates/css-syntax/: .gitignore  Cargo.toml  build.rs
crates/css-syntax-types/: Cargo.toml
crates/css-syntax-types/src/: css.rs  error.rs  interfaces.rs  lib.rs  specs.rs  utils.rs  values.rs
crates/css-syntax/src/: error.rs  lib.rs  syntax.rs  syntax_provider.rs
crates/diff-test/: Cargo.toml
crates/diff-test/src/: main.rs  xml.rs
crates/rari-data/: Cargo.toml
crates/rari-data/src/: baseline.rs  error.rs  feature_urls.rs  lib.rs  specs.rs
crates/rari-deps/: Cargo.toml
crates/rari-deps/src/: bcd.rs  client.rs  current.rs  developer_signals.rs  error.rs  external_json.rs  github_release.rs  lib.rs  mdn_data.rs  npm.rs  popularities.rs  web_ext_examples.rs  web_features.rs  webref_css.rs
crates/rari-deps/test/: url-titles.json
crates/rari-deps/test/package/: css.json
crates/rari-doc/: Cargo.toml
crates/rari-doc/src/: baseline.rs  build.rs  cached_readers.rs  contributors.rs  error.rs  find.rs  git_history.rs  issues.rs  lib.rs  pagefind.rs  percent.rs  position_utils.rs  reader.rs  redirects.rs  resolve.rs  rss.rs  search_index.rs  specs.rs  test_utils.rs  translations.rs  utils.rs  walker.rs
crates/rari-doc/src/docs/: blog.rs  build.rs  curriculum.rs  doc.rs  dummy.rs  json.rs  mod.rs  page.rs  parents.rs  sections.rs  title.rs  types.rs
crates/rari-doc/src/helpers/: api_inheritance.rs  css_info.rs  json_data.rs  l10n.rs  mod.rs  parents.rs  sourcepos.rs  subpages.rs  summary_hack.rs  title.rs  titles.rs  web_ext_examples.rs  webextapi.rs
crates/rari-doc/src/html/: banner.rs  bubble_up.rs  code.rs  fix_img.rs  fix_link.rs  ids.rs  links.rs  mod.rs  modifier.rs  rewriter.rs  sections.rs  sidebar.rs
crates/rari-doc/src/pages/: build.rs  json.rs  mod.rs  page.rs  templates.rs  title.rs
crates/rari-doc/src/pages/types/: blog.rs  contributors.rs  curriculum.rs  doc.rs  dummy.rs  generic.rs  mod.rs  spa.rs  spa_homepage.rs  utils.rs
crates/rari-doc/src/sidebars/: apiref.rs  default_api_sidebar.rs  jsref.rs  mod.rs
crates/rari-doc/src/templ/: api.rs  api_name_index.rs  css_feature_index.rs  js_ref_index.rs  legacy.rs  mod.rs  parser.rs  rari-templ.pest  render.rs
crates/rari-doc/src/templ/macros/: badges.rs  compat.rs  cssinfo.rs  csssyntax.rs  cssxref.rs  domxref.rs  embedinteractiveexample.rs  glossary.rs  htmlxref.rs  jsxref.rs  links.rs  listsubpages.rs  livesample.rs  mod.rs  quick_links_with_subpages.rs  svgxref.rs
crates/rari-doc/src/templ/macros/links/: csp.rs  http_header.rs  link.rs
crates/rari-doc/src/templ/templs/: api_list_alpha.rs  api_list_specs.rs  apiref.rs  badges.rs  banners.rs  compat.rs  css_ref.rs  css_ref_list.rs  cssinfo.rs  csssyntax.rs  echo.rs  firefox_for_developers.rs  glossary.rs  glossarydisambiguation.rs  inheritance_diagram.rs  inline_labels.rs  js_property_attributes.rs  list_subpages_for_sidebar.rs  listsubpages.rs  mod.rs  previous_menu_next.rs  quick_links_with_subpages.rs  secure_context.rs  seecompattable.rs  sidebars.rs  specification.rs  subpages_with_summaries.rs  svginfo.rs  web_ext_examples.rs  webext_all_examples.rs  xsltref.rs
crates/rari-doc/src/templ/templs/embeds/: embed_gh_live_sample.rs  embed_interactive_example.rs  embed_live_sample.rs  embed_youtube.rs  embedghlivesample.rs  embedinteractiveexample.rs  embedyoutube.rs  interactive_example.rs  jsfiddle_embed.rs  jsfiddleembed.rs  live_sample_link.rs  livesample.rs  livesamplelink.rs  mod.rs
crates/rari-doc/src/templ/templs/links/: csp.rs  cssxref.rs  domxref.rs  htmlxref.rs  http.rs  http_header.rs  jsxref.rs  link.rs  mathmlxref.rs  mod.rs  rfc.rs  svgattr.rs  svgxref.rs  webextapixref.rs
crates/rari-doc/src/walker/: mod.rs
crates/rari-doc/tests/fixtures/: web-features.json
crates/rari-embed/: Cargo.toml  meili.http
crates/rari-embed/src/: embed.rs  lib.rs  serve.rs
crates/rari-lsp/: Cargo.toml
crates/rari-lsp/src/: keywords.rs  lib.rs  lsp.rs  lsp_compat.rs  parser.rs  position.rs
crates/rari-md/: Cargo.toml  README.md
crates/rari-md/src/: anchor.rs  bq.rs  character_set.rs  ctype.rs  dl.rs  error.rs  ext.rs  html.rs  li.rs  lib.rs  node_card.rs  note_card.rs  p.rs  utils.rs
crates/rari-sitemap/: Cargo.toml
crates/rari-sitemap/src/: lib.rs  ser.rs
crates/rari-templ-func/: Cargo.toml  README.md
crates/rari-templ-func/src/: lib.rs
crates/rari-templ-func/tests/: basic.rs
crates/rari-tools/: Cargo.toml
crates/rari-tools/src/: add_redirect.rs  error.rs  git.rs  history.rs  index_docs.rs  inventory.rs  lib.rs  move.rs  pagefind.rs  popularities.rs  redirects.rs  remove.rs  replace_deprecated_macros.rs  replace_event_macro.rs  sidebars.rs  sync_translated_content.rs  utils.rs  wikihistory.rs
crates/rari-tools/src/fix/: fixer.rs  issues.rs  mod.rs
crates/rari-tools/src/tests/: blog_fallback.rs  image_fallback.rs  mod.rs
crates/rari-tools/src/tests/fixtures/: blog.rs  docs.rs  mod.rs  redirects.rs  rewrites.rs  sidebars.rs  wikihistory.rs
crates/rari-types/: Cargo.toml
crates/rari-types/src/: error.rs  fm_types.rs  globals.rs  lib.rs  locale.rs  settings.rs  templ.rs
crates/rari-utils/: Cargo.toml
crates/rari-utils/src/: concat.rs  error.rs  io.rs  lib.rs
rari-npm/: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
src/: main.rs  serve.rs
(+25 files in other folders)
