[package]
name = "rari"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
authors = ["Florian Dieminger <me@fiji-flo.de>"]

[workspace]
resolver = "2"
members = [
    "crates/rari-data",
    "crates/rari-utils",
    "crates/rari-deps",
    "crates/rari-types",
    "crates/rari-templ-func",
    "crates/rari-md",
    "crates/rari-doc",
    "crates/rari-linter",
    "crates/rari-l10n",
    "crates/rari-tools",
    "crates/css-syntax",
    "crates/css-syntax-types",
    "crates/css-definition-syntax",
    "crates/diff-test",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
authors = ["Florian Dieminger <me@fiji-flo.de>"]

[dependencies]
anyhow = "1"
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = "2"
rari-doc = { path = "crates/rari-doc" }
rari-tools = { path = "crates/rari-tools" }
rari-deps = { path = "crates/rari-deps" }
rari-types = { path = "crates/rari-types" }
serde_json = { version = "1", features = ["preserve_order"] }
tiny_http = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"
tabwriter = "1"
