[package]
name = "rari"
version = "0.1.24"
edition = "2021"
license = "MPL-2.0"
authors = [
  "Florian Dieminger <me@fiji-flo.de>",
  "The MDN Engineering Team <mdn-dev@mozilla.com>",
]
homepage = "https://github.com/mdn/rari"
repository = "https://github.com/mdn/rari"
rust-version = "1.81"

[[bin]]
path = "crates/rari-cli/main.rs"
name = "rari"

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[workspace]
resolver = "2"
members = [
  "crates/rari-data",
  "crates/rari-utils",
  "crates/rari-deps",
  "crates/rari-types",
  "crates/rari-templ-func",
  "crates/rari-md",
  "crates/rari-doc",
  "crates/rari-linter",
  "crates/rari-sitemap",
  "crates/rari-tools",
  "crates/css-syntax",
  "crates/css-syntax-types",
  "crates/css-definition-syntax",
  "crates/diff-test",
]

[workspace.package]
edition = "2021"
license = "MPL-2.0"
authors = [
  "Florian Dieminger <me@fiji-flo.de>",
  "The MDN Engineering Team <mdn-dev@mozilla.com>",
]
rust-version = "1.81"

[workspace.dependencies]
rari-doc = { path = "crates/rari-doc" }
rari-tools = { path = "crates/rari-tools" }
rari-deps = { path = "crates/rari-deps" }
rari-types = { path = "crates/rari-types" }
rari-utils = { path = "crates/rari-utils" }
rari-md = { path = "crates/rari-md" }
rari-data = { path = "crates/rari-data" }
rari-templ-func = { path = "crates/rari-templ-func" }
rari-sitemap = { path = "crates/rari-sitemap" }

tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
url = { version = "2", features = ["serde"] }
itertools = "0.14"
constcat = "0.5"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
regress = "0.10"
html-escape = "0.2"
ignore = "0.4"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
  "gzip",
] }
indoc = "2"
base64 = "0.22"
console = "0.15"
sha2 = "0.10"
dashmap = { version = "6", features = ["serde"] }
serde_yaml_ng = "0.10"
schemars = { version = "0.8", features = ["chrono"] }
pretty_yaml = "0.5"
yaml_parser = "0.2"
const_format = "0.2"
dialoguer = "0.11"
semver = { version = "1", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }

[dependencies]
rari-doc.workspace = true
rari-tools.workspace = true
rari-deps.workspace = true
rari-types.workspace = true
rari-utils.workspace = true
rari-sitemap.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dashmap.workspace = true
schemars.workspace = true
dialoguer.workspace = true

self_update = { version = "0.42", default-features = false, features = [
  "rustls",
  "compression-flate2",
  "compression-zip-deflate",
] }
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = { version = "3", features = ["tracing"] }
tabwriter = "1"
axum = "0.8"
tokio = "1"
dotenvy = "0.15"

[lints.clippy]
print_stdout = "deny"
