[package]
name = "css-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
regress.workspace = true
serde_json.workspace = true
serde.workspace = true
url.workspace = true
html-escape.workspace = true
rari-deps.workspace = true
rari-types = { workspace = true, optional = true }

css-syntax-types = { path = "../css-syntax-types" }
css-definition-syntax = { path = "../css-definition-syntax" }

[build-dependencies]
anyhow = "1"

[features]
default = []
rari = ["dep:rari-types"]
