[package]
name = "diff-test"
version = "0.0.8"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rayon.workspace = true
anyhow.workspace = true
ignore.workspace = true
itertools.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

jsonpath_lib = "0.3.0"
prettydiff = "0.7"
html-minifier = "5"
ansi-to-html = "0.2"
similar = "2"
htmldiff = "0.1"
clap = { version = "4.5.1", features = ["derive"] }
