[package]
name = "rari-data"
version = "0.0.15"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
testing = ["ts-rs"]

[dependencies]
rari-utils.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
chrono.workspace = true
indexmap.workspace = true
ts-rs = { version = "10.0", optional = true }
