[package]
name = "rari-data"
version = "0.0.21"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rari-utils.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
chrono.workspace = true
indexmap.workspace = true
