[package]
name = "rari-deps"
version = "0.0.12"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rari-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true

css-syntax-types = { path = "../css-syntax-types" }
tar = "0.4"
flate2 = "1"
