[package]
name = "rari-doc"
version = "0.0.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tracing.workspace = true
url.workspace = true
itertools.workspace = true
concat-in-place.workspace = true
constcat.workspace = true
indexmap.workspace = true

serde_yaml = "0.9"
yaml-rust = "0.4"
percent-encoding = "2"
pest = "2"
pest_derive = "2"
validator = { version = "0.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

scraper = { version = "0.20", features = ["deterministic"] }
lol_html = "1"
html-escape = "0.2"
html5ever = "0.27"
ego-tree = "0.6"

ignore = "0.4"
crossbeam-channel = "0.5"
rayon = "1"
enum_dispatch = "0.3"
icu_collator = "1"
icu_locid = "1"
strum = { version = "0.26", features = ["derive"] }
imagesize = "0.13"
svg_metadata = "0.5"
memoize = "0.4"
phf_macros = "0.11"
phf = "0.11"

rari-utils.workspace = true
rari-types.workspace = true
rari-md.workspace = true
rari-data.workspace = true
rari-templ-func.workspace = true
rari-l10n.workspace = true

css-syntax = { path = "../css-syntax", features = ["rari"] }

[dev-dependencies]
rari-types = { path = "../rari-types", features = ["testing"] }
