[package]
name = "rari-doc"
version = "0.1.35"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rari-utils.workspace = true
rari-types.workspace = true
rari-md.workspace = true
rari-data.workspace = true
rari-templ-func.workspace = true

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tracing.workspace = true
url.workspace = true
itertools.workspace = true
constcat.workspace = true
indexmap.workspace = true
sha2.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
pretty_yaml.workspace = true
serde_yaml_ng.workspace = true
yaml_parser.workspace = true
schemars.workspace = true
strum.workspace = true

yaml-rust = "0.4"
percent-encoding = "2"
pest = "2"
pest_derive = "2"
validator = { version = "0.20", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
scraper = { version = "0.23", features = ["deterministic"] }
lol_html = "2"
html-escape = "0.2"
html5ever = "0.29"
ego-tree = "0.10"
rss = { version = "2", features = [], default-features = false }
cssparser = "0.34"

ignore = "0.4"
crossbeam-channel = "0.5"
rayon = "1"
enum_dispatch = "0.3"
icu_collator = "1"
icu_locid = "1"
imagesize = "0.13"
svg_metadata = "0.5"
memoize = "0.5"
unescaper = "0.1"


css-syntax = { path = "../css-syntax", features = ["rari"] }

[dev-dependencies]
rari-types = { path = "../rari-types", features = ["testing"] }
indoc.workspace = true
