[package]
name = "rari-lsp"
version = "0.1.26"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rari-doc.workspace = true
rari-tools.workspace = true
rari-types.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

tree-sitter-mdn = "0.1"
tree-sitter-md = { version = "0.3", features = ["parser"] }
lsp-textdocument = "0.3"
tower-lsp = "0.20.0"
tree-sitter = "0.23"
streaming-iterator = "0.1"
