[package]
name = "rari-lsp"
version = "0.1.43"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rari-doc.workspace = true
rari-tools.workspace = true
rari-types.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-mdn.workspace = true

tree-sitter-md = { version = "0.3", features = [
  "parser",
], default-features = false }
lsp-textdocument = "0.4"
tower-lsp-server = "0.22"
streaming-iterator = "0.1"
dashmap = "6"
