[package]
name = "rari-md"
version = "0.0.14"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
regex.workspace = true
thiserror.workspace = true
rari-types.workspace = true
itertools.workspace = true
base64.workspace = true

comrak = { version = "0.29", default-features = false }
