[package]
name = "rari-templ-func"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
rari-types.workspace = true

syn = { version = "2", features = ["full"] }
quote = "1"

[dev-dependencies]
anyhow.workspace = true
