[package]
name = "rari-templ-func"
version = "0.2.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
rari-types.workspace = true
darling.workspace = true
quote.workspace = true

syn = { version = "2", features = ["full"] }

[dev-dependencies]
anyhow.workspace = true
