[package]
name = "rari-tools"
version = "0.0.10"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rari-types.workspace = true
rari-utils.workspace = true
rari-doc.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true
indoc.workspace = true

console = "0"
dialoguer = "0"
csv = "1"

[dev-dependencies]
serial_test = { version = "3", features = ["file_locks"] }
rari-types = { workspace = true, features = ["testing"] }
fake = { version = "2", features = ["chrono", "serde_json"] }
rand = "0"
