[package]
name = "rari-tools"
version = "0.1.39"
edition.workspace = true
authors = [
  "Andi Pieper <apieper@mozilla.com>",
  "The MDN Engineering Team <mdn-dev@mozilla.com>",
]
license.workspace = true
rust-version.workspace = true

[dependencies]
rari-types.workspace = true
rari-utils.workspace = true
rari-doc.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true
indoc.workspace = true
rayon.workspace = true
console.workspace = true
sha2.workspace = true
serde_yaml_ng.workspace = true
pretty_yaml.workspace = true
yaml_parser.workspace = true
const_format.workspace = true
dialoguer.workspace = true

csv = "1"

[dev-dependencies]
serial_test = { version = "3", features = ["file_locks"] }
rari-types = { workspace = true, features = ["testing"] }
fake = { version = "4", features = ["chrono", "serde_json"] }
rand = "0.9"
assert-json-diff = "2"
