[package]
name = "rari-types"
version = "0.1.22"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
testing = []
default = []

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
chrono.workspace = true
schemars.workspace = true
semver.workspace = true
tracing.workspace = true

serde_variant = "0.1"
normalize-path = "0.2"
strum = { version = "0.26", features = ["derive"] }
dirs = "5"
config = { version = "0.15", default-features = false, features = ["toml"] }
